<resources>
    <string name="app_name">Rocket</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Real time pictures from\nfriends, on your screen</string>
    <string name="appname">Rocket</string>
    <string name="email_address">Email address</string>
    <string name="what_s_your_email">What\'s your email ?</string>
    <string name="use_phone_number">Use phone number</string>
    <string name="continue_string">Continue</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
    <string name="password_require">Password must have at least <font color="#F1AF09">8 characters</font></string>
    <string name="type_password_string">Type password</string>
    <string name="password_hidden">********</string>
    <string name="confirm">Confirm</string>
    <string name="password_confirm">Password confirm</string>
    <string name="type_your_name">Type your name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="friend_count_sample">18 friends</string>
    <string name="history">History</string>
    <string name="add_text">Add text…</string>
    <string name="send_to">Send to…</string>
    <string name="scale_sample">1x</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="take_photo_error">Take photo error</string>
    <string name="device_is_not_supported_0_5x">Device  is not supported 0.5x</string>
    <string name="zoom_value_format">%.1fx</string>
    <string name="you_ve_sign_up_please_sign_in_to_continue">You\'ve sign up, please sign in to continue</string>
</resources>